--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,6 @@ project(cv)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(cv main.cpp)
+
+find_package( OpenCV REQUIRED )
+target_link_libraries( cv ${OpenCV_LIBS} )
